--- a/main.html
+++ b/main.html
@@ -8,6 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>How I'll Use My AccioJob Salary:</h2>
+
+<ol>
+  <li data-ns-test="shoppingList">New laptop</li>
+  <li data-ns-test="shoppingList">Smartphone</li>
+  <li data-ns-test="shoppingList">Gaming console</li>
+</ol>
+
+<h2>My Dream Holiday Destinations:</h2>
+
+<ul>
+  <li data-ns-test="holidayList">Bora Bora</li>
+  <li data-ns-test="holidayList">Santorini</li>
+  <li data-ns-test="holidayList">Hawaii</li>
+</ul>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
